# aegis-core

./: aegis.core.config.ini  meson.build
config/: config.ini
include/: config.h.in  http_server.h
include/api/: camera_api.h  core_api.h  faceent_api.h  pam_api.h  profile_api.h
scripts/: clean.sh  install.sh  start.sh
src/: http_server.cpp  main.cpp
src/api/: camera_api.cpp  core_api.cpp  faceent_api.cpp  pam_api.cpp  profile_api.cpp
